# python-project-140

./: .gitignore  Makefile  README.md  demo.cast  demo_calc.cast  demo_gcd.cast  demo_prime.cast  demo_prog.cast  pyproject.toml
brain_games/: __init__.py  cli.py  is_even.py
brain_games/games/: calculator.py  gcd.py  is_even.py  is_prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
