[project]
name = "brain-games"
version = "0.1.0"
description = "A set of small CLI brain games (Even, Calc, GCD, Progression, Prime) to practice logic, code comprehension, and terminal fluency."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Juliana Carvajal" }
]
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
